--- a/style.css
+++ b/style.css
@@ -366,89 +366,180 @@ figcaption{
      object-fit: cover;
      border-radius: 10px;
 }
-
-
-
-
-
-
-
-
-
-@media (max-width: 1023px){
-     nav{
-          flex-direction: column;
-          justify-content: flex-start;
-          height: auto;
-          padding: 10px;
-     }
-     ul{
-          width: 100%;
-          justify-content: center;
-          gap: 10px;
-     }
-     .section-index-uno{
-          height: 1000px;
-          padding: 20px 0;
-     }
-     .frase-section-index-dos{
-          font-size: 90%;
-          padding: 10px;
-     }
-     .titulo-section{
-          padding-top: 40px;
-          font-size: 1.5rem;
-     }
-     figcaption{
-          font-size: 75%;
-     }
-     .section-index-dos{
-          justify-content: flex-start;
-          align-items: center;
-          height: 1400px;
-          gap: 20px;
-          flex-wrap: wrap;
-     }
-     .imagen-cuadro-section-index-dos{
-          max-width: 90%;
-          height: auto;
-          margin: 10px 0;
-     }
-     .contenedor-section-index-dos{
-          flex-wrap: wrap;
-          justify-content: center;
-     }
-     img{
-          max-width: 100%;
-          height: auto;
-     }
-     .titulo-header{
-          width: 100%;
-          font-size: 1.5rem;
-     }
-     .button{
-          height: auto;
-          width: 20%;
-          font-size: small;
-          padding: 10px;
-          margin: 10px 0;
-     }
-     .imagenes-section-index-cuatro{
-          height: auto;
-     }
-     .imagen-horizontal-section-index-cuatro{
-          height: 100px;
-          width: 150px;
-     }
-     .imagen-vertical-section-index-cuatro{
-          height: 300px;
-          width: 150px;
-     }
-     .section-index-cuatro{
-          height: 1500px;
-          justify-content: center;
-          align-items: center;
-          height: 1000px;
-          flex-wrap: wrap;
-     }
+.section-trayectoria-dos{
+     height: 1000px;
+     flex-basis: 100%;
+     padding: 20px;
+     background-color: whitesmoke;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-evenly;
+     align-items: center;
+}
+.cuadro-section-trayectoria-dos{
+     height: 700px;
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     align-items: center;
+     flex-wrap: wrap;
+}
+.texto-cuadro-section-trayectoria-dos{
+     height: 400px;
+     width: 600px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+}
+.titulo-texto-cuadro-section-trayectoria-dos{
+     height: 90px;
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: flex-start;
+}
+.titulo-texto-cuadro-section-trayectoria-dos h1{
+     font-size: 2.5rem;
+     position: relative;
+}
+.titulo-texto-cuadro-section-trayectoria-dos h1::after{
+     content: '';
+     display: flex;
+     height: 3px;
+     width: 70px;
+     background-color: #00064C;
+     margin-top: 20px;
+}
+.titulo-texto-cuadro-section-trayectoria-dos h2{
+     font-size: 1.5rem;
+     position: relative;
+}
+.titulo-texto-cuadro-section-trayectoria-dos h2::after{
+     content: '';
+     display: flex;
+     height: 2px;
+     width: 50px;
+     background-color: #00064C;
+     margin-top: 20px;
+}
+.texto-texto-cuadro-section-trayectoria-dos{
+     height: 600px;
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: start;
+     text-align: start;
+     font-size: 1.2rem;
+}
+.imagen-cuadro-section-trayectoria-dos{
+     height: 350px;
+     width: 600px;
+}
+.imagen-cuadro-section-trayectoria-dos img{
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     border-radius: 10px;
+}
+.lista-texto-texto-cuadro-section-trayectoria-dos{
+     height: 300px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     list-style-type: none;
+}
+.lista-texto-texto-cuadro-section-trayectoria-dos li{
+     display: flex;
+     align-items: center;
+     font-size: 1rem;
+}
+.lista-texto-texto-cuadro-section-trayectoria-dos li::before{
+     content: "–";
+     color: #00064C;
+     font-weight: bold;
+     margin-right: 10px;
+     font-size: 1.2rem;
+}
+.section-albumes-dos{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 50px;
+     flex-wrap: wrap;
+}
+.contenedor-imagenes-section-albumes-dos{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     flex-wrap: wrap;
+}
+.cuadro-imagenes-section-albumes-dos{
+     display: flex;
+     flex-direction: row;
+     justify-content: space-around;
+     align-items: center;
+     gap: 100px;
+     flex-wrap: wrap;
+}
+.imagen-cuadro-section-index-dos{
+     height: auto;
+     width: 300px;
+     padding: 50px;
+     background-color: #00064C;
+     transition: transform 0.3s ease-in-out;
+}
+.imagen-cuadro-section-index-dos:hover{
+     transform: translateY(-20px);
+}
+.section-contacto-dos{
+     display: flex;
+     justify-content: center;
+}
+.contact-info{
+     background-color: #ffffff;
+     padding: 20px;
+     border-radius: 8px;
+     display: flex;
+     flex-direction: column;
+     width: 300px;
+     justify-content: center;
+     text-align: center;
+}
+.info{
+     display: flex;
+     flex-direction: column;
+     justify-content: space-around;
+}
+.contact-info h2{
+     font-size: 24px;
+     color: #000000;
+}
+.contact-info .info p{
+     font-size: 16px;
+     color: #333333;
+     margin: 10px 0;
+}
+.contact-info .info a{
+     color: #333333;
+     text-decoration: none;
+}
+.contact-info .info a:hover{
+     text-decoration: underline;
+}
+.social-icons{
+     display: flex;
+     justify-content: center;
+     gap: 10px;
+     margin-top: 10px;
+}
+.social-icons img{
+     width: 24px;
+     height: 24px;
 }
